Add GLM 5.2 issue solving result (without 'eclipse window')